# mojimoji

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  cythonize.sh  mojimoji.cpp  mojimoji.pyx  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_mojimoji.py
.github/workflows/: build.yml  build_manylinux.yml  deploy.yml  pythonapp.yml  test.yml
mojimoji/: __init__.pyx
mojimoji-stubs/: __init__.pyi
