[mypy-pytest]
ignore_missing_imports = True

[metadata]
name = mojimoji
version = 0.0.13b1
author = Studio Ousia
author_email = ikuya@ousia.jp
description = A fast converter between Japanese hankaku and zenkaku characters
keywords = japanese
url = http://github.com/studio-ousia/mojimoji
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: Japanese
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = mojimoji
python_requires = >=3.7